--- a/templater_modules/lpcandy/style/fonts.css
+++ b/templater_modules/lpcandy/style/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Open Sans Light';
 	font-style: normal;
 	font-weight: 300;
 	src: local('Open Sans Light'), local('OpenSans-Light'), url(fonts/DXI1ORHCpsQm3Vp6mXoaTYraN7vELC11_xip9Rz-hMs.woff) format('woff');
@@ -8,19 +8,18 @@
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
-	font-weight: 400;
 	src: local('Open Sans'), local('OpenSans'), url(fonts/RjgO7rYTmqiVp7vzi-Q5UT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Open Sans Semibold';
 	font-style: normal;
 	font-weight: 500;
 	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(fonts/DXI1ORHCpsQm3Vp6mXoaTYraN7vELC11_xip9Rz-hMs.woff) format('woff');
 }
 
 @font-face {
-	font-family: 'Open Sans';
+	font-family: 'Open Sans Bold';
 	font-style: normal;
 	font-weight: 700;
 	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(fonts/DXI1ORHCpsQm3Vp6mXoaTYraN7vELC11_xip9Rz-hMs.woff) format('woff');
